# Depict

./: .gitignore  Cargo.toml  LOGIC.md  README.md  TODO.md
depict/: Cargo.toml
depict-core/: Cargo.toml
depict-core/src/: core.rs  lib.rs
depict-core/src/core/: color.rs  context.rs  engine.rs  image.rs  properties.rs  settings.rs  shapes.rs  system.rs  texture.rs
depict-core/src/engine/: properties.rs  shader.rs  state.rs
depict-core/src/input/: mouse.rs
depict-macro/: Cargo.toml
depict-macro/src/: lib.rs  shape.rs
depict/src/: builtin.rs  component.rs  core.rs  graphics.rs  input.rs  lib.rs
depict/src/builtin/: circle.rs  ellipse.rs  polygon.rs  rectangle.rs  text.rs  triangle.rs
depict/src/component/: dimension.rs  id.rs  memory.rs
depict/src/core/: properties.rs  settings.rs  system.rs
depict/src/engine/: properties.rs  renderer.rs  shader.rs
depict/src/graphics/: asset.rs  font.rs
depict/src/input/: keyboard.rs
depict/src/shaders/: shader.wgsl
examples/testing/: Cargo.toml
examples/testing/src/: main.rs
src/: core.rs  engine.rs  graphics.rs  main.rs
src/builtin/: rectangle.rs  text.rs
src/component/: id.rs  key.rs  screen.rs  time.rs
src/core/: asset.rs  color.rs  context.rs  properties.rs  renderable.rs  settings.rs  shapes.rs
src/engine/: app.rs  bounds.rs  dimension.rs  id.rs  properties.rs  renderer.rs  shader.rs  size.rs  state.rs  uniforms.rs
src/graphics/: asset.rs  atlas.rs  color.rs  font.rs  glyph.rs  image.rs  shapes.rs
src/input/: keyboard.rs  mouse.rs  tracker.rs
src/shaders/: shader.wgsl
