[package]
name = "depict"
version = "0.1.0"
edition = "2021"
authors = ["TheDark <99thedark@gmail.com>"]

[dependencies]
env_logger = "0.11.3"
winit = "0.30.3"
log = "0.4.22"
pollster = "0.3.0"
wgpu = "0.20.1"
bytemuck = { version = "1.16.1", features = ["derive"] }
image = { version = "0.25.1", features = ["png"] }
glam = "0.28.0"
fontdue = "0.9.2"
depict-macro = { path = "../depict-macro" }
rectangle-pack = "0.4.2"
num = "0.4.3"

[lib]
crate-type = ["lib"]
readme = "../README.md"
